updated starter site page

--- a/setup/index.html
+++ b/setup/index.html
@@ -34,9 +34,9 @@
     <div class="card">
         <div class="container">
             <h4><b>Starter website!</b></h4>
-            <p>This is a starter page, it will be removed once the website is build using gatsby. This can be done using
-                the command listed below in terminal with gatsby's cli tool installed. Please note that this command
-                most be executed in the <em><strong>website</strong></em> directory.</p>
+            <p>This is a starter page, it will be removed once the website is built using gatsby. This can be done using
+                the command listed below with gatsby's cli tool installed. Please note that this command
+                most be executed in the <em><strong>gatsby</strong></em> directory.</p>
             <p><code>gatsby build</code></p>
 
 
